@@ -212,10 +212,10 @@
 					<h4>publiée par <span class="highlight">###PUBLISHER###</span> le <span class="highlight">###PUBLISH_DATE###</span><!--<br />(téléchargé <span class="highlight">###DOWNLOAD###</span> fois)--></h4>
 				</div>
 					
-				<div class="soft-infos">
+				<div class="soft-infos"><!-- ###DESCRIPTION_SUBPART### begin -->
 					<h4>Description de l'appication</h4>
-					<p>###DESCRIPTION###</p>
-					<div class="link">###LINK###</div>
+					<p>###DESCRIPTION###</p><!-- ###DESCRIPTION_SUBPART### end --><!-- ###LINK_SUBPART### begin -->
+					<div class="link">###LINK###</div><!-- ###LINK_SUBPART### end -->
 				</div>
 				###SCREENSHOT###
 			</div>
